--- a/templates/eblast/emailgroupslist.html
+++ b/templates/eblast/emailgroupslist.html
@@ -2,9 +2,9 @@
 <ul>
     {% for emailgroup in emailgroups %}
         {% if forloop.counter == 1 %}
-            <li class="selected emailGroup" data-id={{ emailgroup.id }}>{{ emailgroup.name }} <p>{{ emailgroup.emailids.count }} {% trans "emailids" %}</p></li>
+            <li class="selected emailGroup" data-id={{ emailgroup.id }}>{{ emailgroup.name }} <p>{{ emailgroup.emailids.count }} {% if emailgroup.emailids.count > 1 %}{% trans "emails" %}{% else %}{% trans "email" %}{% endif %}</p></li>
         {% else %}
-            <li class="emailGroup" data-id={{ emailgroup.id }}>{{ emailgroup.name }} <p>{{ emailgroup.emailids.count }} {% trans "emailids" %}</p></li>
+            <li class="emailGroup" data-id={{ emailgroup.id }}>{{ emailgroup.name }} <p>{{ emailgroup.emailids.count }} {% if emailgroup.emailids.count > 1 %}{% trans "emails" %}{% else %}{% trans "email" %}{% endif %}</p></li>
         {% endif %}
     {% endfor %}
 </ul>
