--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -212,7 +212,7 @@
         <div class="col-md-6">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">{% trans "New and Active Member" %}</h3>
+                    <h3 class="box-title">{% trans "New Members" %}</h3>
                 </div>
                 <div class="box-body">
                     <canvas id="newMemberChart" style="height:230px"></canvas>
@@ -222,10 +222,22 @@
         <div class="col-md-6">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">{% trans "Total Ekata Member" %}</h3>
+                    <h3 class="box-title">{% trans "Total Ekata Members" %}</h3>
                 </div>
                 <div class="box-body">
                     <canvas id="totalMemberChart" style="height:230px"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="box box-success">
+                <div class="box-header with-border">
+                    <h3 class="box-title">{% trans "Active Members" %}</h3>
+                </div>
+                <div class="box-body">
+                    <canvas id="activeMemberChart" style="height:230px"></canvas>
                 </div>
             </div>
         </div>
@@ -635,20 +647,10 @@
     var newMemberChartCanvas = $("#newMemberChart").get(0).getContext("2d");
     var newMemberChart = new Chart(newMemberChartCanvas);
     var newMemberChartData = {
-      labels: [{% for activemembercount in activemembercounts %} "{{ activemembercount.date | date:"d/m/Y" }}", {% endfor %}],
+      labels: [{% for newmembercount in newmembercounts %} "{{ newmembercount.date | date:"d/m/Y" }}", {% endfor %}],
       datasets: [
         {
-          label: "Active Member",
-          fillColor: "rgba(210, 214, 222, 1)",
-          strokeColor: "rgba(210, 214, 222, 1)",
-          pointColor: "rgba(210, 214, 222, 1)",
-          pointStrokeColor: "#c1c7d1",
-          pointHighlightFill: "#fff",
-          pointHighlightStroke: "rgba(220,220,220,1)",
-          data: [{% for activemembercount in activemembercounts %} {{ activemembercount.count }}, {% endfor %}]
-        },
-        {
-          label: "New Member",
+          label: "New Members",
           fillColor: "rgba(60,141,188,0.9)",
           strokeColor: "rgba(60,141,188,0.8)",
           pointColor: "#3b8bba",
@@ -664,13 +666,31 @@
         responsive: true,
     }
     newMemberChart.Bar(newMemberChartData, newMemberChartOptions);
+    var activeMemberChartCanvas = $("#activeMemberChart").get(0).getContext("2d");
+    var activeMemberChart = new Chart(activeMemberChartCanvas);
+    var activeMemberChartData = {
+      labels: [{% for activemembercount in activemembercounts %} "{{ activemembercount.date | date:"d/m/Y" }}", {% endfor %}],
+      datasets: [
+        {
+          label: "Active Members",
+          fillColor: "rgba(0, 166, 90, 1)",
+          strokeColor: "rgba(0, 166, 90, 1)",
+          pointColor: "rgba(0, 166, 90, 1)",
+          pointStrokeColor: "#c1c7d1",
+          pointHighlightFill: "#fff",
+          pointHighlightStroke: "rgba(220,220,220,1)",
+          data: [{% for activemembercount in activemembercounts %} {{ activemembercount.users.all.count }}, {% endfor %}]
+        }
+      ]
+    };
+    activeMemberChart.Bar(activeMemberChartData, newMemberChartOptions);
     var totalMemberChartCanvas = $("#totalMemberChart").get(0).getContext("2d");
     var totalMemberChart = new Chart(totalMemberChartCanvas);
     var totalMemberChartData = {
         labels: [{% for totalmembercount in totalmembercounts %} "{{ totalmembercount.date | date:"d/m/Y" }}", {% endfor %}],
         datasets: [
           {
-            label: "Total Member",
+            label: "Total Members",
             fillColor: "rgba(60,141,188,0.9)",
             strokeColor: "rgba(60,141,188,0.8)",
             pointColor: "#3b8bba",
