added production and beta specific settings

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,10 +107,17 @@
         <header class="main-header">
             <!-- Logo -->
             <a href="{% url 'dashboard:index' %}" class="logo">
+                {% ifequal SITE_TYPE 'beta' %}
+                <!-- mini logo for sidebar mini 50x50 pixels -->
+                <span class="logo-mini" style="font-size: 10px">EKATA(b)</span>
+                <!-- logo for regular state and mobile devices -->
+                <span class="logo-lg">EKATA(Beta)</span>
+                {% else %}
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini">EKATA</span>
                 <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg">EKATA</span>
+                {% endifequal %}
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
