--- a/templates/publicusers/userlist.html
+++ b/templates/publicusers/userlist.html
@@ -1,142 +1,100 @@
 {% extends "base.html" %}
 {% load i18n staticfiles %}
 {% block title %}
-    {% trans "Users" %}
+    {% trans "Members" %}
 {% endblock title %}
 {% block extrastyle %}
 <style>
-    .search-box {
-        background: #f9f9f9;
-        padding: 15px;
-        position: relative;
+    .content-header {
+        padding: 0;
     }
-
-    .search-box > .form-group {
-        margin-bottom: 0px;
-    }
-
-    .search-box > .form-group > .form-control {
-        height: 47px;
-    }
-
-    .search-box > .form-group .fa {
-        position: absolute;
-        top: 27px;
-        left: 25px;
-        font-size: 25px;
-        color: #bbbbbb;
-    }
-
-    .search-box > .form-group > .btn {
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        border-radius: 0px;
-    }
-
-    .center-col {
-	    float:none !important;
-	    margin:30px auto;
+    .content-wrapper {
+        background-color: #f9f9f9;
     }
 </style>
-{% endblock extrastyle %} {% block content_header %}
-<h1>
-    {% trans "Users" %}<br>
-    <small><i class="fa fa-user"></i>
-            {% if user and not user.is_anonymous %}
-                <a>
-                {% blocktrans with username_t=user.username trimmed %}
-                   Hello, {{ username_t }}!
-                {% endblocktrans %}
-                </a>
-                <br>
-            {% else %}
-                <a>Hello, User!</a>
-                <br>
-            {% endif %}
-        </small>
-</h1>
-<ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-users"></i>{% trans "Users" %}</a></li>
-</ol>
-{% endblock content_header %} {% block content %}
-<div class="row">
-    <div class="col-md-12">
-        <div class="box box-primary">
-            <div class="box-header with-border">
-                <h3 class="box-title">Search Users</h3>
-            </div><!-- /.box-header -->
-            <div class="box-body">
-                <div class="col-lg-5 center-col search-box">
-                    <form class="form-group" action="." id="usersearch">
-                        <input type="text" class="form-control" placeholder="{% trans " Search Users " %}" id="users" name="username">
-                        {% comment %}
-                            <i class="fa fa-search"></i>
-                        <button type="submit" class="btn btn-primary btn-lg">{% trans "Search" %}</button>
-                        {% endcomment %}
-                    </form>
-                </div>
+{% endblock extrastyle %}
+{% block content_header_new %}
+    <section class="content-header-new container-fluid">
+        <div class="col-md-4">
+            <h1>
+                {% trans "Members" %}<br>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#">{% trans "Dashboard" %}</a></li>
+                <li class="active">{% trans "Members" %}</li>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search by username..." id="liveSearch">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-content-header btn-content-search"><i class="fa fa-search"></i></button>
+                </span>
+                <span class="input-group-btn filterbtn">
+                    <button type="submit" class="btn btn-content-header"><i class="fa fa-filter"></i></button>
+                </span>
             </div>
         </div>
-    </div>
+    </section>
+{% endblock content_header_new %}
+{% block content %}
+<div class="row">
     <div class="col-md-12" id="searchresults">
-        {% include "publicusers/users.html" %}
+        {% include page_template %}
     </div>
 </div>
 {% endblock content %}
 {% block extrascripts %}
+    <script src="{% static "el-pagination/js/el-pagination.js" %}"></script>
     <script type="text/javascript">
-        /*$("#usersearch").submit(function() {
-             var query = $("#users").val();
-            $("#searchresults").load(
-                "{% url 'publicusers:index' %}?username=" + encodeURIComponent(query)
-            );
-            return false;
-        })*/
-        $("#users").keyup(function(){
-            var query = $(this).val();
-            $("#searchresults").load(
-                "{% url 'publicusers:index' %}?username=" + encodeURIComponent(query)
-            );
-        });
-        (function getOnlineUsers(){
-            $.ajax({
-                url: '{% url 'publicusers:getonlineusers' %}',
-                success: function(data){
-                    $('.userstatus').each(function(){
-                        var user_id = $(this).data('user-id');
-                        var userstatus = $(this);
-                        $.each(data, function(k, v){
-                            if (k == user_id) {
-                                if (data[k] === 'online') {
+    (function getOnlineUsers(){
+        $.ajax({
+            url: '{% url 'publicusers:getonlineusers' %}',
+            success: function(data){
+                $('.userstatus').each(function(){
+                    var user_id = $(this).data('user-id');
+                    var userstatus = $(this);
+                    $.each(data, function(k, v){
+                        if (k == user_id) {
+                            if (data[k] === 'online') {
+                                $(userstatus).empty();
+                                $(userstatus).removeAttr('data-toggle');
+                                $(userstatus).removeAttr('title');
+                                $(userstatus).append('<i class="fa fa-circle text-success onlinestatus"></i>');
+                            }
+                            else {
+                                if (data[k]) {
+                                    var lastseen = moment(data[k]).format('MMMM Do YYYY, hh:mm a')
                                     $(userstatus).empty();
-                                    $(userstatus).removeAttr('data-toggle');
-                                    $(userstatus).removeAttr('title');
-                                    $(userstatus).append('<i class="fa fa-circle text-success onlinestatus"></i> {% trans "Online" %}');
+                                    $(userstatus).append('<i class="fa fa-circle onlinestatus"></i>');
+                                    $(userstatus).attr('data-toggle', 'tooltip');
+                                    $(userstatus).attr('title', '{% trans "lastseen: " %}' + lastseen);
                                 }
                                 else {
-                                    if (data[k]) {
-                                        var lastseen = moment(data[k]).format('MMMM Do YYYY, hh:mm a')
-                                        $(userstatus).empty();
-                                        $(userstatus).append('<i class="fa fa-circle onlinestatus"></i> {% trans "Offline" %}');
-                                        $(userstatus).attr('data-toggle', 'tooltip');
-                                        $(userstatus).attr('title', '{% trans "lastseen: " %}' + lastseen);
-                                    }
-                                    else {
-                                        $(userstatus).empty();
-                                        $(userstatus).append('<i class="fa fa-circle onlinestatus"></i> {% trans "Offline" %}')
-                                        $(userstatus).attr('data-toggle', 'tooltip');
-                                        $(userstatus).attr('title', '{% trans "lastseen: unknown" %}');
-                                    }
+                                    $(userstatus).empty();
+                                    $(userstatus).append('<i class="fa fa-circle onlinestatus"></i>')
+                                    $(userstatus).attr('data-toggle', 'tooltip');
+                                    $(userstatus).attr('title', '{% trans "lastseen: unknown" %}');
                                 }
                             }
-                        })
-                    });
-                },
-                complete: function() {
-                    setTimeout(getOnlineUsers, 15000);
-                }
-            });
-        })();
+                        }
+                    })
+                });
+            },
+            complete: function() {
+                setTimeout(getOnlineUsers, 15000);
+            }
+        });
+    })();
+    $.endlessPaginate({
+        paginateOnScroll: true,
+        paginateOnScrollMargin: 20
+    });
+    $("#liveSearch").keyup(function(){
+        var query = $(this).val();
+        $("#searchresults").load(
+            "{% url 'publicusers:index' %}?q=" + encodeURIComponent(query)
+        );
+    });
     </script>
 {% endblock extrascripts %}
