--- a/templates/sidebar_main.html
+++ b/templates/sidebar_main.html
@@ -27,7 +27,7 @@
         <span>{% trans "Profile" %}</span>
     </a>
 </li>
-<li class="{% active request 'publicusers:index' %} mainnavcontent"><a href="{% url 'publicusers:index' %}"><i class="fa fa-users"></i> <span>{% trans "Users" %}</span></a></li>
+<li class="{% active request 'publicusers:index' %} mainnavcontent"><a href="{% url 'publicusers:index' %}"><i class="fa fa-users"></i> <span>{% trans "Members" %}</span></a></li>
 <li class="treeview mainnavcontent {% active request 'g:allgroups' %} {% active request 'g:joinedgroups' %} {% active request 'g:subscribedgroups' %}">
     <a href="#">
         <i class="fa fa-cubes"></i>
